--- a/package.json
+++ b/package.json
@@ -12,27 +12,34 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"@reduxjs/toolkit": "^1.9.3",
+		"@vitejs/plugin-react": "^3.1.0",
+		"autoprefixer": "^10.4.14",
+		"postcss": "^8.4.21",
+		"prettier-plugin-tailwindcss": "^0.2.6",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"vite": "^4.1.0",
-		"@vitejs/plugin-react": "^3.1.0"
+		"react-redux": "^8.0.5",
+		"redux": "^4.2.1",
+		"vite": "^4.2.1"
 	},
 	"devDependencies": {
-		"@types/react": "^18.0.27",
+		"@types/react": "^18.0.31",
 		"@types/react-dom": "^18.0.10",
-		"@typescript-eslint/eslint-plugin": "^5.54.1",
-		"@typescript-eslint/parser": "^5.54.1",
-		"eslint": "^8.36.0",
+		"@typescript-eslint/eslint-plugin": "^5.57.0",
+		"@typescript-eslint/parser": "^5.57.0",
+		"eslint": "^8.37.0",
 		"eslint-config-airbnb": "^19.0.4",
-		"eslint-config-prettier": "^8.7.0",
+		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-import": "^2.27.5",
 		"eslint-plugin-jsx-a11y": "^6.7.1",
 		"eslint-plugin-react": "^7.32.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
 		"husky": "^8.0.3",
 		"lint-staged": "^13.2.0",
-		"prettier": "2.8.4",
-		"typescript": "^4.9.3"
+		"prettier": "^2.8.7",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5.0.2"
 	},
 	"lint-staged": {
 		"*.{js,ts,tsx}": "npm run lint",
