--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,23 @@
 {
+	"$schema": "https://json.schemastore.org/tsconfig",
+	"display": "Create React App",
+
 	"compilerOptions": {
-		"target": "esnext",
+		"lib": ["dom", "dom.iterable", "esnext"],
 		"module": "esnext",
-		"moduleResolution": "node",
-		"jsx": "preserve",
-		"lib": ["esnext", "dom"],
-		"strict": true,
-		"esModuleInterop": true,
+		"target": "es2015",
+
+		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
-		"skipLibCheck": true,
+		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
 		"isolatedModules": true,
+		"jsx": "react-jsx",
+		"moduleResolution": "node",
 		"noEmit": true,
-		"baseUrl": "./",
-		"paths": {
-			"src/": ["src/"]
-		}
-	},
-	"include": ["src//*.ts", "src//*.tsx", "vite.config.ts"],
-	"exclude": ["node_modules"]
+		"noFallthroughCasesInSwitch": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"strict": true
+	}
 }
