--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"vite": "^4.2.1"
 	},
 	"devDependencies": {
+		"@types/node": "^18.15.11",
 		"@types/react": "^18.0.31",
 		"@types/react-dom": "^18.0.10",
 		"@typescript-eslint/eslint-plugin": "^5.57.0",
@@ -39,7 +40,7 @@
 		"lint-staged": "^13.2.0",
 		"prettier": "^2.8.7",
 		"tailwindcss": "^3.3.0",
-		"typescript": "^5.0.2"
+		"typescript": "^5.0.3"
 	},
 	"lint-staged": {
 		"*.{js,ts,tsx}": "npm run lint",
