--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@reduxjs/toolkit": "^1.9.3",
 		"@vitejs/plugin-react": "^3.1.0",
 		"autoprefixer": "^10.4.14",
+		"html-react-parser": "^3.0.15",
 		"postcss": "^8.4.21",
 		"prettier-plugin-tailwindcss": "^0.2.6",
 		"react": "^18.2.0",
