--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"react-redux": "^8.0.5",
 		"react-router-dom": "^6.10.0",
 		"redux": "^4.2.1",
+		"swiper": "^9.2.0",
 		"vite": "^4.2.1"
 	},
 	"devDependencies": {
